# plutufy

./: README.md  index.html  index2.html  main.py  pyproject.toml
plutufy/application/business_logic/: controller.py
plutufy/data_access/: yfinance_client.py
plutufy/domain/models/: roce.py  stock_statement.py
