[tool.poetry]
name = "plutufy"
version = "0.1.0"
description = "Stock analysis app"
authors = ["Mark Ekvall <markekv@kth.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.33"
pandas = "^2.1.4"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
